@startuml
' =====================================================
' CROOKS CART COLLECTIVES - DATABASE SCHEMA
' LANDSCAPE ORIENTATION
' =====================================================

scale max 1920 width
scale max 1080 height

left to right direction

skinparam linetype ortho
skinparam defaultTextAlignment left

skinparam {
BackgroundColor White
BorderColor Black
FontColor Black
BorderThickness 3
RoundCorner 8
}

hide circle
hide empty members
hide stereotypes

skinparam padding 15
skinparam margin 12
skinparam entityPadding 25

skinparam defaultFontSize 14
skinparam defaultFontName Arial

skinparam entity {
FontSize 16
FontStyle bold
BackgroundColor White
BorderColor Black
BorderThickness 3
}

skinparam line {
thickness 2
color Black
}

' =====================================================
' ENTITIES
' =====================================================

entity "administrators" as admins {
admin_id : INT (PK)
--
first_name : VARCHAR(50)
last_name : VARCHAR(50)
email : VARCHAR(100)
username : VARCHAR(50)
password : VARCHAR(255)
contact_number : VARCHAR(20)
profile_picture : VARCHAR(255)
date_joined : DATETIME
last_log : TIMESTAMP
}

entity "users" as users {
user_id : INT (PK)
--
first_name : VARCHAR(50)
middle_name : VARCHAR(50)
last_name : VARCHAR(50)
email : VARCHAR(100)
username : VARCHAR(50)
password : VARCHAR(255)
birthdate : DATE
gender : ENUM [Male, Female, Other]
contact_number : VARCHAR(20)
address : TEXT
profile_picture : VARCHAR(255)
date_created : TIMESTAMP
}

entity "customers" as customers {
customer_id : INT (PK)
user_id : INT (FK)
--
date_joined : TIMESTAMP
}

entity "sellers" as sellers {
seller_id : INT (PK)
user_id : INT (FK)
--
business_name : VARCHAR(100)
identity_path : VARCHAR(255)
id_document_path : VARCHAR(255)
is_verified : ENUM [pending, verified, rejected]
date_applied : TIMESTAMP
verification_date : TIMESTAMP
}

entity "products" as products {
product_id : INT (PK)
seller_id : INT (FK)
--
name : VARCHAR(100)
description : TEXT
price : DECIMAL(10,2)
category : VARCHAR(50)
stock_quantity : INT
media_path : VARCHAR(255)
is_active : BOOLEAN
date_added : TIMESTAMP
}

entity "carts" as carts {
cart_id : INT (PK)
customer_id : INT (FK)
seller_id : INT (FK)
product_id : INT (FK)
--
quantity : INT
price : DECIMAL(10,2)
added_at : TIMESTAMP
}

entity "orders" as orders {
order_id : INT (PK)
customer_id : INT (FK)
seller_id : INT (FK)
product_id : INT (FK)
--
quantity : INT
price : DECIMAL(10,2)
subtotal : DECIMAL(10,2)
shipping_address : VARCHAR(255)
payment_method : ENUM [COD, Online]
order_date : TIMESTAMP
status : ENUM [pending, delivered, cancelled]
delivered_at : TIMESTAMP
cancelled_at : TIMESTAMP
cancelled_by : ENUM [customer, seller]
}

entity "product_reviews" as reviews {
review_id : INT (PK)
product_id : INT (FK)
user_id : INT (FK)
order_id : INT (FK)
--
rating : TINYINT
comment : TEXT
date_posted : TIMESTAMP
}

' =====================================================
' RELATIONSHIPS
' =====================================================

admins ||--o{ sellers : verifies
users ||--|| customers : extends as
users ||--|| sellers : applies as
sellers ||--o{ products : lists
customers ||--o{ carts : adds
products ||--o{ carts : added to
customers ||--o{ orders : makes
products ||--o{ orders : contains
sellers ||--o{ orders : processes
orders ||--|| reviews : generates
products ||--o{ reviews : reviewed
users ||--o{ reviews : writes

' =====================================================
' LAYOUT - SIMPLE HORIZONTAL FLOW
' =====================================================

' Just let PlantUML auto-layout with left to right direction
' No hidden relationships needed

@enduml